Make InteractiveDetector a ContextLifecycleObserver

This CL fixes flakiness on some WebGL tests. Before, if Time to Interactive was
not detected, the InteractiveDetector would try to unregister itself on its
destructor. If the weak pointer in |observers_| was cleaned up and another
observer was registered between the time the weak pointer was cleaned up and the
destructor of InteractiveDetector was called, we would call
AddTaskTimeObserver() again, hitting a DCHECK.

Bug: 848715
Change-Id: I6c6bef6811f570367aee3f983919e899ab0db1f5
Reviewed-on: https://chromium-review.googlesource.com/1085628
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Jeremy Roman <jbroman@chromium.org>
Commit-Queue: Nicolás Peña Moreno <npm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565426}
Former-commit-id: 427a414451ff7ccf07f4b727949e91e8cf3d19f7